--- a/lessons/L_ 1, P_ 1.html
+++ b/lessons/L_ 1, P_ 1.html
@@ -7,6 +7,23 @@
 <body>
 
 	<script>
+		/*
+	Написать программу рассчета обьема цилиндра, все данные (кроме числа PI) вводятся с клавиатуры руками. (число Пи в js выглядит так: Math.PI). Также нужно вывести информацию в таком виде:
+	**************
+
+	Обьем цилиндра с площадью основы *S* (вывети значение), радиусом *R* и высотой *H* равен:
+
+	--------------------
+
+	V = результат.
+
+	-------------------
+
+	end.
+
+	P.S. Все звездочки и черточки нужно нарисовать. Вывод выполнять в документ (document.write())
+
+	*/
 		//Пункт 1	PI*R2*H
 		var r = prompt("Введите радиус:");
 		var h = prompt("Введите высоту:");
