--- a/lessons/L_ 1, P_ 2.html
+++ b/lessons/L_ 1, P_ 2.html
@@ -7,7 +7,10 @@
 <body>
 	<span>Четные: </span>
 	<script>
-		//Пункт 2	
+		/*Ввести с клавиатуры 3 переменные (a, b, c). Привести их все в число. 
+		Выполнить операцию суммирования всех переменных. Указать какие переменные являются чётными.
+		*/
+		//Пункт 2		
 		//Ввести с клавиатуры 3 переменные (a, b, c). 
 		var a = prompt("a:");
 		var b = prompt("b:");
