--- a/lessons/L_ 2, P_ 1.html
+++ b/lessons/L_ 2, P_ 1.html
@@ -7,6 +7,8 @@
 <body>
 
 	<script>
+		//Вывести n чисел из ряда Фибоначчи, где n - вводится с клавиатуры
+		
 		//Пункт 1  __ 1 1 2 3 5 8 13 21 34 55 89
 		var n = prompt("Введите кол-во чисел из ряда Фибоначчи:");
 		var f0 = 0;
