--- a/lessons/L_ 2, P_ 2.html
+++ b/lessons/L_ 2, P_ 2.html
@@ -7,6 +7,8 @@
 <body>
 
 	<script>
+		//Ввести с клавиатуры a и b, где а меньше b. Запустить цикл перебора от a до b с шагом h (ввод с клавиатуры). 
+		//Посчитать сумму факториалов* чисел которые попадаются во время перебора.
 		//Пункт 2  __ 1 2 6 24 120 720 5040
 		var a = prompt("a:");
 		var b = prompt("b:");
