--- a/lessons/L_ 2, P_ 3.html
+++ b/lessons/L_ 2, P_ 3.html
@@ -11,6 +11,8 @@
 		</tbody>
 	</table>
 	<script>
+		//Выведите столбец четных чисел в промежутке от 0 до 100. (в document в виде таблицы)
+		
 		var start = 0;
 		var end = 100;
 		var table = document.getElementById("table");
