--- a/lessons/L_ 3, P_ 2.html
+++ b/lessons/L_ 3, P_ 2.html
@@ -7,6 +7,7 @@
 <body>
 
 	<script>
+		//Вводится число. Преобразовать его в другое число, цифры которого будут следовать в обратном порядке по сравнению с введенным числом.
 		//Пункт 2
 		var num = prompt("Введите число:");
 		var arr = num.split('');
