--- a/lessons/L_ 3, P_ 3.html
+++ b/lessons/L_ 3, P_ 3.html
@@ -7,10 +7,11 @@
 <body>
 
 	<script>
+		//Дано целое число, состоящее из разных цифр. Определить, какая из цифр заданного числа больше, т. е. найти наибольшую цифру числа.
 		//Пункт 3
 		var num = prompt("Введите число:");
 		var arr = num.split('');
-    	max = Math.max( ...arr);
+    		max = Math.max( ...arr);
 		document.write(max);
 	</script>
 </body>
