--- a/lessons/L_ 4, P_ 3/index.html
+++ b/lessons/L_ 4, P_ 3/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>L_4 P_1 HomeWork Perkin Aleksandr</title>	
+	<title>L_4 P_3 HomeWork Perkin Aleksandr</title>	
 </head>
 <body>
 	<p>Array A: <span id="A"></span></p>
 	<p>Array B: <span id="B"></span></p>
-	<p>max: <span id="max"></span></p>
-	<p>min: <span id="min"></span></p>
+	<p>Array C: <span id="C"></span></p>
 
 	<script src="script.js"></script>
 </body>
